--- a/geonode/templates/_permissions_form.html
+++ b/geonode/templates/_permissions_form.html
@@ -2,6 +2,7 @@
 
 <div class="modal fade" id="modal_perms" style="display:none">
   <form id="permission_form" accept-charset="UTF-8" method="post" class="modal-form" action="{{ form_action|default:"" }}">
+   {% csrf_token %}
     <div class="modal-header">
       <a class="close" data-dismiss="modal">×</a>
       <h3>{% trans "Permissions" %}</h3>
